4719.	[bug]		Address PVS static analyzer warnings. [RT #45946]

4718.	[func]		Avoid seaching for a owner name compression pointer
			more than once when writing out a RRset. [RT #45802]

4717.	[bug]		Treat replies with QCOUNT=0 as truncated if TC=1,
			FORMERR if TC=0, and log the error correctly.
			[RT #45836]

4716.	[placeholder]

	--- 9.12.0a1 released ---

4715.	[bug]		TreeMemMax was mis-identified as a second HeapMemMax
			in the Json cache statistics. [RT #45980]

4714.	[port]		openbsd/libressl: add support for building with
			--enable-openssl-hash. [RT #45982]

4713.	[func]		Added support for the DNS Response Policy Service
			(DNSRPS) API, which allows named to use an external
			response policy daemon when built with
			"configure --enable-dnsrps".  Thanks to Vernon
			Schryver and Farsight Security. [RT #43376]

4712.	[bug]		"dig +domain" and "dig +search" didn't retain the
			search domain when retrying with TCP. [RT #45547]

4711.	[test]		Some RR types were missing from genzones.sh.
			[RT #45782]

4710.	[cleanup]	Changed the --enable-openssl-hash default to yes.
			[RT #45019]

4709.	[cleanup]	Use dns_name_fullhash() to hash names for RRL.
			[RT #45435]

4708.	[cleanup]	Legacy Windows builds (i.e. for XP and earlier)
			are no longer supported. [RT #45186]

4707.	[func]		The lightweight resolver daemon and library (lwresd
			and liblwres) have been removed. [RT #45186]

4706.	[func]		Code implementing name server query processing has
			been moved from bin/named to a new library "libns".
			Functions remaining in bin/named are now prefixed
			with "named_" rather than "ns_".  This will make it
			easier to write unit tests for name server code, or
			link name server functionality into new tools.
			[RT #45186]

4705.	[placeholder]

4704.	[cleanup]	Silence Visual Studio compiler warnings. [RT #45898]

4703.	[bug]		BINDInstall.exe was missing some buffer length checks.
			[RT #45898]

4702.	[func]		Update function declarations to use